--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -3,7 +3,11 @@
   "sap.app": {
     "id": "ic.phoron.servicerepairordertimefeedback",
     "type": "application",
-    "i18n": "i18n/i18n.properties",
+    "i18n": {
+			"bundleUrl": "i18n/i18n.properties",
+			"supportedLocales": [""],
+			"fallbackLocale": ""
+		},
     "applicationVersion": {
       "version": "0.0.1"
     },
@@ -60,10 +64,12 @@
       "i18n": {
         "type": "sap.ui.model.resource.ResourceModel",
         "settings": {
-          "bundleName": "ic.phoron.servicerepairordertimefeedback.i18n.i18n"
+          "bundleName": "ic.phoron.servicerepairordertimefeedback.i18n.i18n",
+          "supportedLocales": [""],
+          "fallbackLocale": ""
         }
       },
-      "": {
+      "serviceorder": {
         "dataSource": "mainService",
         "preload": true,
         "settings": {}
